# openenv-hackathon

./: .dockerignore  Dockerfile  README.md  client.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.ps1  validate-submission.sh
server/: app.py
src/customer_support_env/: env.py
src/customer_support_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/customer_support_env/server/: app.py
src/customer_support_env/tasks/: grader.py  hard.py  medium.py
